@@ -6,6 +6,7 @@
 * Added support of high-precision oversampling routines to dspu::Oversampler module.
 * Added functions for readinng current dspu::Oversampler setup.
 * Added routines for converting music time signature to frequency/period.
+* Implemented series of normalized LFO functions.
 * Implemented dspu::RingBuffer class for processing the circular ring buffers.
 * Updated build scripts.
 
